fix login style on iOS

--- a/styles/lps/login.less
+++ b/styles/lps/login.less
@@ -31,6 +31,8 @@ section.loginSection{
         input{
           border-bottom: 1px solid rgba(255,255,255,.3);
           color: blue;
+          border-radius: 0;
+          padding-left: 1rem;
         }
 
         label{
